fix(core): scheduler is not injecting taskDefaults